crosshair/examples/deal/bugs_detected/choice.out
choice.py:7: error: false when calling choice(items = ['', '', '', 'boo'], rng = crosshair.libimpl.randomlib.ExplicitRandom([3])) (which returns 'boo')
